week_7_assignment/service_for_MySQL.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: blog
  labels:
    app: blog
    component: backend
spec:
  ports:
  - port: 3306
  selector:
    app: blog
    component: backend
