week_7_assignment/service_for_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: blog
  labels:
    app: blog
    component: frontend
spec:
  selector:
    app: blog
    component: frontend
  ports:
  - port: 80
    targetPort: 80
